Fix grouping selector spacing
This has no effect on the functionality of the code, but it makes the
code more clear and easier to read.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -7,7 +7,8 @@
     background-color: hsl(60, 100%, 50%);
 }
 
-.primary-button, .secondary-button {
+.primary-button,
+.secondary-button {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
